[package]
name = "netadm-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
rusty-doors = { git = "ssh://git@github.com/oxidecomputer/rusty-doors" }
tracing = "0.1"
thiserror = "1"

[build-dependencies]
bindgen = "0.59"
