[package]
name = "libnet"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
colored = "2"
cfg-if = "1.0"
tracing = "0.1"
thiserror = "1"
libc = "0.2"
anyhow = "1.0"
socket2 = { version = "0.5", features = ["all"] }

# need https://github.com/jmesmon/rust-libzfs/commit/2bf2a5b1 for i32 type
nvpair = { git = "https://github.com/jmesmon/rust-libzfs", branch = "master" }
nvpair-sys = { git = "https://github.com/jmesmon/rust-libzfs", branch = "master" }
#nvpair = "0.5"
#nvpair-sys = "0.4"

dlpi = { git = "https://github.com/oxidecomputer/dlpi-sys" }
num_enum = "0.5.7"
oxnet = { git = "https://github.com/oxidecomputer/oxnet" }
rusty-doors = { git = "https://github.com/oxidecomputer/rusty-doors" }
rand = "0.8.5"
winnow = "0.6.18"
