[package]
name = "netadm"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.5", features = ["color"] }
libnet = { path = "../libnet" }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = "0.2"
