[package]
name = "netadm"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "unstable-styles"] }
libnet = { path = "../libnet" }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = "0.2"
anstyle = "1.0.0"
humantime = "2.2.0"
oxnet = { version = "0.1.0", default-features = false }
