[package]
name = "netadm"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "unstable-styles"] }
libnet = { path = "../libnet" }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
anstyle = "1.0.13"
humantime = "2.3.0"
oxnet = { version = "0.1.4", default-features = false }
